--- a/package.json
+++ b/package.json
@@ -19,13 +19,16 @@
   "homepage": "https://github.com/Edwin2345/Camp_Finder#readme",
   "dependencies": {
     "ejs": "^3.1.9",
+    "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "method-override": "^3.0.0",
     "mongoose": "^7.6.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/ejs": "^3.1.4",
     "@types/express": "^4.17.20",
+    "@types/method-override": "^0.0.34",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.8.7",
     "typescript": "^5.2.2"
