--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "joi": "^17.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.6.3",
     "ts-node": "^10.9.1"
@@ -28,6 +29,7 @@
   "devDependencies": {
     "@types/ejs": "^3.1.4",
     "@types/express": "^4.17.20",
+    "@types/joi": "^17.2.3",
     "@types/method-override": "^0.0.34",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.8.7",
