--- a/package.json
+++ b/package.json
@@ -18,17 +18,21 @@
   },
   "homepage": "https://github.com/Edwin2345/Camp_Finder#readme",
   "dependencies": {
+    "connect-flash": "^0.1.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "joi": "^17.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.6.3",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
+    "@types/connect-flash": "^0.0.39",
     "@types/ejs": "^3.1.4",
     "@types/express": "^4.17.20",
+    "@types/express-session": "^1.17.9",
     "@types/joi": "^17.2.3",
     "@types/method-override": "^0.0.34",
     "@types/mongoose": "^5.11.97",
