--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "joi": "^17.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.6.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
+    "passport-local-mongoose": "^8.0.0",
     "ts-node": "^10.9.1"
   },
   "devDependencies": {
@@ -37,6 +40,9 @@
     "@types/method-override": "^0.0.34",
     "@types/mongoose": "^5.11.97",
     "@types/node": "^20.8.7",
+    "@types/passport": "^1.0.14",
+    "@types/passport-local": "^1.0.37",
+    "@types/passport-local-mongoose": "^6.1.3",
     "typescript": "^5.2.2"
   }
 }
