--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   },
   "homepage": "https://github.com/Edwin2345/Camp_Finder#readme",
   "dependencies": {
+    "cloudinary": "^1.41.0",
     "connect-flash": "^0.1.1",
+    "dotenv": "^16.3.1",
     "ejs": "^3.1.9",
     "ejs-mate": "^4.0.0",
     "express": "^4.18.2",
@@ -26,6 +28,8 @@
     "joi": "^17.11.0",
     "method-override": "^3.0.0",
     "mongoose": "^7.6.3",
+    "multer": "^1.4.5-lts.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
     "passport-local-mongoose": "^8.0.0",
@@ -33,12 +37,14 @@
   },
   "devDependencies": {
     "@types/connect-flash": "^0.0.39",
+    "@types/dotenv": "^8.2.0",
     "@types/ejs": "^3.1.4",
     "@types/express": "^4.17.20",
     "@types/express-session": "^1.17.9",
     "@types/joi": "^17.2.3",
     "@types/method-override": "^0.0.34",
     "@types/mongoose": "^5.11.97",
+    "@types/multer": "^1.4.9",
     "@types/node": "^20.8.7",
     "@types/passport": "^1.0.14",
     "@types/passport-local": "^1.0.37",
