--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "homepage": "https://github.com/Edwin2345/Camp_Finder#readme",
   "dependencies": {
+    "@mapbox/mapbox-sdk": "^0.15.3",
     "cloudinary": "^1.41.0",
     "connect-flash": "^0.1.1",
     "dotenv": "^16.3.1",
@@ -42,6 +43,7 @@
     "@types/express": "^4.17.20",
     "@types/express-session": "^1.17.9",
     "@types/joi": "^17.2.3",
+    "@types/mapbox__mapbox-sdk": "^0.13.8",
     "@types/method-override": "^0.0.34",
     "@types/mongoose": "^5.11.97",
     "@types/multer": "^1.4.9",
